--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@socket.io/admin-ui": "^0.5.1",
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-ipfilter": "^1.3.1",
